--- a/assets/style.css
+++ b/assets/style.css
@@ -51,7 +51,7 @@ header a {
 color: color:#000090;
 }
 
-#index_content,#search_content {
+.content {
 display:block;
 border-top:3px rgb(113,127,133) solid;
 border-bottom:3px rgb(113,127,133) solid;
@@ -60,9 +60,9 @@ padding-top:1%;
 padding-bottom:1%;
 }
 
-#article_comment,#search_list {
+.left_side {
 text-align: justify;
-width: 50%;
+width: 70%;
 margin: 0 1.5%;
 display: inline-block;
 vertical-align: middle;
@@ -71,8 +71,7 @@ vertical-align: middle;
 aside {
 width:20%;
 display: inline-block;
-vertical-align: middle;
-margin-left:15%;
+vertical-align: top;
 background-color:rgb(218,220,224);
 font-family: Verdana, Geneva, sans-serif;
 }
@@ -110,7 +109,7 @@ form {
 margin-bottom:5%;
 }
 
-#comment_content {
+.comment_content {
 border-radius:0.5em;
 border:2px solid black;
 background-color:rgb(218,220,224);
@@ -119,11 +118,12 @@ padding-left:10%;
 padding-right:10%;
 }
 
-#comment_content>p:first-child {
+.comment_content>p:first-child {
 color:blue;
 }
 
 article h1 {
+margin-top:0%;
 font-family:'Comic Sans MS', cursive;
 font-size:150%;
 }
