--- a/assets/style.css
+++ b/assets/style.css
@@ -1,129 +1,195 @@
 body {
-background: url("fondBeige.jpg");
-min-width: 600px;
-margin-left:auto;
-margin-right:auto;
-width:80%;
+	background: url("fondBeige.jpg");
+	min-width: 600px;
+	margin-left:auto;
+	margin-right:auto;
+	width:80%;
 }
 
 header {
-height: 160px;
-position: relative;
-border: 2px solid black;
-border-radius: 0.5em;
-background-image: url("film.png");
-background-size:100% 100%;
-background-position:center center;
-margin-top: 4px;
+	position: relative;
+	border: 2px solid black;
+	border-radius: 0.5em;
+	margin-top: 2%;
+	margin-bottom:2%;
+}
+
+header #bg{
+	width:100%;
+	background-image: url("film.png");
+	background-size:100% 100%;
+	background-position:center center;
+	display:inline-block;
+	height:120px;
 }
 
 header h1 {
-display:block;
-position:relative;
-left:7%;
-top:15%;
-color:#000090;
-background-color:white;
-width:30%;
-opacity:0.5;
-filter:alpha(opacity=50);
-border-radius:0.5em;
-font-size:1.6em;
+	margin-top:2%;
+	display:block;
+	position:relative;
+	left:7%;
+	width:30%;
+	vertical-align: center;
+	color:#000090;
+	background-color:white;
+	opacity:0.5;
+	filter:alpha(opacity=50);
+	border-radius:0.5em;
+	font-size:1.6em;
 }
 
-header ul {
-position: absolute;
-right: 50px;
-bottom: 0px;
-margin-bottom: 3px;
+/* La barre de navigation est en mode horizontal par défaut */
+header nav {
+	float: right;
+	margin-bottom: 0px; 
 }
 
-header li {
-display: inline;
-border: 2px solid black;
-border-bottom: none;
-border-top-left-radius: 0.5em;
-border-top-right-radius: 0.5em;
-padding: 5px 1px;
+header nav ul{
+	position: absolute;
+	right: 50px;
+	bottom: 0px;
+	margin-bottom: 3px; 
 }
+	
+header nav li {
+	display: inline;
+	border: 2px solid black;
+	border-bottom: none;
+	border-top-left-radius: 0.5em;
+	border-top-right-radius: 0.5em;
+	padding: 5px 1px;
+}
+
 
 header a {
-color: color:#000090;
+	color: color:#000090;
 }
 
 .content {
-display:block;
-border-top:3px rgb(113,127,133) solid;
-border-bottom:3px rgb(113,127,133) solid;
-margin-top:1%;
-padding-top:1%;
-padding-bottom:1%;
+	border-top:3px rgb(113,127,133) solid;
+	border-bottom:3px rgb(113,127,133) solid;
+	margin-top:1%;
+	padding-bottom:2%;
 }
 
 .left_side {
-text-align: justify;
-width: 70%;
-margin: 0 1.5%;
-display: inline-block;
-vertical-align: middle;
+	text-align: justify;
+	width: 60%;
+	margin-top: 1.5%;
+	display: inline-block;
+	vertical-align: middle;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 aside {
-width:20%;
-display: inline-block;
-vertical-align: top;
-background-color:rgb(218,220,224);
-font-family: Verdana, Geneva, sans-serif;
+	width:20%;
+	display: inline-block;
+	vertical-align: top;
+	background-color:rgb(218,220,224);
+	font-family: Verdana, Geneva, sans-serif;
+	margin-left:10%;
 }
 
 aside h1,aside input,aside form {
-text-align:center;
+	text-align:center;
 }
 
 aside h1 {
-padding-left:5%;
+	padding-left:5%;
 }
 
 footer {
-margin-top:0%;
-padding-left:20px;
+	margin-top:0%;
+	padding-left:20px;
 }
 
 img{
-display: block;
-margin-left: auto;
-margin-right: auto 
+	display: block;
+	margin-left: auto;
+	margin-right: auto; 
 }
 
 article img+p {
-text-align:center;
-font-style:italic;
+	text-align:center;
+	font-style:italic;
 }
 
 footer img {
-float:right;
-height:70px;
+	float:right;
+	height:70px;
 }
 
 form {
-margin-bottom:5%;
+	margin-bottom:5%;
 }
 
 .comment_content {
-border-radius:0.5em;
-border:2px solid black;
-background-color:rgb(218,220,224);
-margin-left:10%;
-padding-left:10%;
-padding-right:10%;
+	border-radius:0.5em;
+	border:2px solid black;
+	background-color:rgb(218,220,224);
+	margin-left:10%;
+	padding-left:10%;
+	padding-right:10%;
 }
 
 .comment_content>p:first-child {
-color:blue;
+	color:blue;
+}
+
+.comment_content>p:nth-child(2) {
+	color:white;
 }
 
 article h1 {
-margin-top:0%;
-font-family:'Comic Sans MS', cursive;
-font-size:150%;
+	margin-top:0%;
+	font-family:'Comic Sans MS', cursive;
+	font-size:150%;
 }
+
+/* le retour vers le main menu n'est visible que sur mobile donc on le cache par défaut*/
+#skipTo {
+	display: none;
+}
+#skipTo li {
+	background: #b1fffc;
+}
+
+
+/* Media Queries */
+@media screen and (max-width: 800px) {
+
+	/*#skipTo {
+		display: block;
+	}*/
+	
+	* { margin: 0; padding: 0; }
+	
+	body {
+		width:100%;
+	}
+	header nav/*, #main, aside*/ {
+		float: left;
+		margin: 0 0 10px; 
+		width: 100%;
+	}	
+	header nav ul{
+		right: 0px;
+		position:relative;
+		margin: 0 0 0px; 
+		width: 100%;
+	}
+	header nav li {
+		margin: 0;
+		display: block;
+		margin-bottom: 3px;
+	}
+	header nav a {
+		display: block;
+		padding: 10px;
+		text-align: center;
+	}			
+}
+
+
+
