--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,11 @@
 body {
 	background: url("fondBeige.jpg");
-	min-width: 600px;
+	min-width: 801px;
 	margin-left:auto;
 	margin-right:auto;
-	width:80%;
+	width:100%;
+	/*min-width:641px;//minimum de largeur de redimensionnement avant passage dans le @media*/
+
 }
 
 header {
@@ -28,7 +30,7 @@ header h1 {
 	display:block;
 	position:relative;
 	left:7%;
-	width:30%;
+	width:39%;
 	vertical-align: center;
 	color:#000090;
 	background-color:white;
@@ -69,12 +71,12 @@ header a {
 	border-top:3px rgb(113,127,133) solid;
 	border-bottom:3px rgb(113,127,133) solid;
 	margin-top:1%;
-	padding-bottom:2%;
+	padding-bottom:2%;/****************************************/
 }
 
 .left_side {
 	text-align: justify;
-	width: 60%;
+	width: 59%;
 	margin-top: 1.5%;
 	display: inline-block;
 	vertical-align: middle;
@@ -97,6 +99,7 @@ aside h1,aside input,aside form {
 
 aside h1 {
 	padding-left:5%;
+	padding-right : 5%;
 }
 
 footer {
@@ -158,7 +161,11 @@ article h1 {
 
 /* Media Queries */
 @media screen and (max-width: 800px) {
+* { margin: 0; padding: 0; }
 
+header h1 {
+width : 80%;
+}
 	/*#skipTo {
 		display: block;
 	}*/
@@ -167,8 +174,10 @@ article h1 {
 	
 	body {
 		/*width:100%;*/
-		min-width : 510px;
+		min-width : 401px;
 	}
+	
+	
 	header nav/*, #main, aside*/ {
 		float: left;
 		margin: 0 0 10px; 
@@ -190,9 +199,13 @@ article h1 {
 		padding: 10px;
 		text-align: center;
 	}			
+	aside{
+	min-width:30%;
+	}
 }
 
-@media screen and (max-width: 509px) {
+@media screen and (max-width: 400px) {
+* { margin: 0; padding: 0; }
 
 	/*#skipTo {
 		display: block;
@@ -225,15 +238,15 @@ article h1 {
 	
 	aside {
 
-display: inline;
-/*vertical-align: middle;*/
+/*display: inline;*/
+vertical-align: middle;
 background-color:rgb(218,220,224);
 font-family: Verdana, Geneva, sans-serif;
-min-width : 30%;/*ajouté pour que le input ne dépasse pas du inside*/
+min-width : 156px;/*ajouté pour que le input ne dépasse pas du inside*/
 
 }
-/*
-header #bg h1{
+
+/*header #bg h1{
 width :90%;
 padding-right:10px;
 
@@ -242,7 +255,7 @@ padding-right:10px;
 
 
 
-#article_comment {
+.left_side {
 text-align: justify;
 width: 90%;
 margin: 0 1.5%;
