--- a/assets/add_style.css
+++ b/assets/add_style.css
@@ -5,3 +5,38 @@
 h1 {
 	font-family:'Comic Sans MS', cursive;
 }
+
+
+
+
+@media screen and (max-width: 400px) {
+
+.content {
+border-top :none;
+
+}
+
+.left_side {
+
+text-align : left;
+
+}
+
+label{
+margin-top:3%;
+display : block;
+}
+aside{
+min-width:95%;
+margin-left:4%;
+}
+
+img{
+
+width : 30%;
+}
+
+footer p{
+margin-top: 4%;
+margin-bottom : 4%;
+}
