--- a/assets/about_style.css
+++ b/assets/about_style.css
@@ -2,3 +2,11 @@ article img+p {
 	font-style:normal;
 	text-align:justify;
 }
+
+article img{
+	min-width:150px; /* 240 px est la largeur minimale d'un smartphone */
+	display: block;
+	margin-left: auto;
+	margin-right: auto; 
+	width:256px;
+}
