--- a/assets/add_style.css
+++ b/assets/add_style.css
@@ -1,21 +1,24 @@
-#ajout label {
+.formulary label {
 	display:block;
 	margin-bottom:3%;
 	font-weight:bold;
 }
 
-#ajout label input, #ajout label textarea {
+.formulary label input, .formulary label textarea {
 	display:block;
+	width:50%;
 }
 
-#ajout {
+.formulary {
 	margin-left:10%;
 }
 
-#ajout button {
+.formulary button {
+	display:block;
 	height:15%;
 	width:20%;
 	border-radius:0.5em;
+	margin-top:2%;
 }
 
 /*
