--- a/assets/style.css
+++ b/assets/style.css
@@ -99,7 +99,7 @@ article p,.comment_content p {
 
 /* aside correspond à la barre de recherche */
 aside {
-	width:20%;
+	width:10em;
 	display: inline-block;
 	vertical-align: top;
 	background-color:rgb(218,220,224);
@@ -114,6 +114,7 @@ aside,aside input {
 aside input {
 	width:70%;
 }
+
 aside h2 {
 	padding-left:5%;
 	padding-right : 5%;
@@ -128,21 +129,25 @@ footer p {
 }
 
 figure img{
-	min-width:150px; /* 240 px est la largeur minimale d'un smartphone */
 	display: block;
 	margin-left: auto;
 	margin-right: auto; 
-	width:256px;
-}
-
-#station {
-	width:300px;
+	width:50%;
 }
 
 figcaption{
 	margin-top:2%;
 	text-align:center;
 	font-style:italic;
+}
+
+figure p {
+	margin-top:0;
+	text-align:center;
+}
+
+figure,figure p {
+	font-family:modern, monospace;
 }
 
 footer img {
@@ -182,9 +187,6 @@ form {
 	font-size:150%;
 }
 
-article {
-
-}
 /* Le deuxième background sans image de fond n'est pas affiché en écran standard */
 header #bg2 {
 	display:none;
@@ -201,9 +203,14 @@ em {
 	font-weight:bold;
 }
 
-.formulary label input, .formulary label textarea {
+.formulary label input{
 	display:block;
 	width:50%;
+}
+
+.formulary label textarea {
+	display:block;
+	width:100%;
 }
 
 .formulary {
@@ -220,6 +227,7 @@ em {
 
 /* Media Queries : nous avons fixé une première largeur maximale à 800 px car c'est à cette largeur que l'ergonomie n'est plus adaptée*/
 @media screen and (max-width: 800px) {
+	
 	* { margin: 0; padding: 0; }
 	
 	/* On n'affiche plus le background avec l'image de fond */
@@ -230,7 +238,7 @@ em {
 	header #bg2{
 		width:100%;
 		display:inline-block;
-		height:5em;
+		height:20%;
 		vertical-align:middle;
 	}
 
@@ -238,8 +246,8 @@ em {
 		color:#000090;
 		border-radius:0.5em;
 		font-size:1.4em;
-		height:70px;
-		line-height:70px;
+		height:10%;
+		line-height:10%;
 		text-align:center;
 	}
 
@@ -252,6 +260,11 @@ em {
 		  font-family:Impact, fantasy
 	}
 
+	figcaption,p,.comments,aside {
+		margin-top:5%;
+		margin-bottom:5%;
+	}
+		
 	.content {
 		display:block;
 		border-top:none;
@@ -261,9 +274,9 @@ em {
 	}
 	
 	.left_side {
-		width: 100%;
+		width: 90%;
 		margin-top: 2%;
-		display: inline-block;
+		display: block;
 		vertical-align: middle;
 		margin-left:auto;
 		margin-right:auto;
@@ -313,7 +326,7 @@ em {
 		margin-bottom:2%;
 	}
 	
-	.content .left_side article p+a {
+	.left_side article p+a {
 		position:relative;
 		left:42%;
 	}
@@ -334,9 +347,9 @@ em {
 		width:50%;
 	}
 	
-	/* Pour que le body reprenne toute la largeur de l'écran */
+	/* Pour que le body soit plus allongé */
 	body {
-		width:auto;
+		width:90%;
 	}
 	
 	aside input {
@@ -346,6 +359,35 @@ em {
 	footer p {
 		text-align:center;
 	}
+	
+	table {
+		margin-top:5%;
+		margin-bottom:5%;
+	}
+	
+	/* Modifie les formulaires des pages ajout, interstellar et biographie */
+	.formulary label input,.formulary label textarea {
+		width:100%;
+		margin-top:5%;
+		margin-bottom:5%;
+	}
+	
+	.formulary button {
+		margin-left:auto;
+		margin-right:auto;
+		width:10em;
+	}
+	
+	.formulary {
+		margin-left:0;
+		margin-top:5%;
+	}
+	
+	.formulary label {
+		text-align:center;
+		margin-top:5%;
+		margin-bottom:5%;
+	}
 }
 
 /* A partir de 360 px, la barre de recherche est trop petite et le logo de Lyon 1 prend trop de place */
@@ -354,7 +396,7 @@ em {
 		min-width:75%;
 	}
 	
-	footer img {
+	footer img,#station {
 		float:none;
 		display: block;
 		margin-left: auto;
