--- a/assets/about_style.css
+++ b/assets/about_style.css
@@ -4,9 +4,15 @@ article img+p {
 }
 
 article img{
-	min-width:150px; /* 240 px est la largeur minimale d'un smartphone */
+	min-width:240px; /* 240 px est la largeur minimale d'un smartphone */
 	display: block;
 	margin-left: auto;
 	margin-right: auto; 
 	width:256px;
+}
+
+@media screen and (max-width: 800px) {
+	article img {
+		margin-top:5%;
+	}
 }
