--- a/assets/biography_style.css
+++ b/assets/biography_style.css
@@ -1,9 +1,11 @@
+/*
 figure {
 	float:right;
 	margin-left:1%;
 	margin-right:1%;
 	text-align:center;
 }
+*/
 
 .left_side {
 	vertical-align: top;
